--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Note Nav</string>
+    <string name="action_note">action_note</string>
+    <string name="action_map">action_map</string>
+    <string name="action_profile">action_profile</string>
 </resources>
